@@ -1,4 +1,4 @@
-# $NetBSD: XENU,v 1.21 2006/06/01 19:39:59 bouyer Exp $
+# $NetBSD: XEN3_DOMU,v 1.1 2006/06/08 22:17:07 hubertf Exp $
 
 include 	"arch/xen/conf/std.xen"
 
@@ -12,6 +12,9 @@ maxusers	32		# estimated number of users
 
 #
 options 	XEN
+options 	XEN3
+options 	MAXPHYS=32768	#xbd doesn't handle 64k transfers
+
 #options 	DOM0OPS
 
 options 	I686_CPU
@@ -175,9 +178,11 @@ hypervisor*	at mainbus?		# Xen hypervisor
 npx0		at hypervisor?		# x86 math coprocessor
 
 xencons*	at hypervisor?		# Xen virtual console
-xennet* 	at hypervisor?		# Xen virtual network interface
 
-xbd*		at hypervisor?		# Xen virtual block device
+xenbus*		at hypervisor?		# Xen virtual bus
+
+xennet* 	at xenbus?		# Xen virtual network interface
+xbd*		at xenbus?		# Xen virtual block device
 
 include	"arch/i386/conf/GENERIC.local"
 
